# ProSIMSIt

./: README.md  example_config.toml  pyproject.toml
prosimsit/: __init__.py  command_line_interface.py  constants.py  io.py  main.py  oktoberfest_functions.py  picked_fdr_functions.py  raw.py  simsi_functions.py  utils.py
tests/unittests/: test_io.py  test_simsi_functions.py
